--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,11 @@
     "test": "test"
   },
   "dependencies": {
-    "multer": "^1.0.5",
+    "chokidar": "^1.0.6",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "mongodb": "^2.0.43",
-    "chokidar": "^1.0.6"
+    "multer": "^1.0.5"
   },
   "devDependencies": {},
   "scripts": {
