--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "chokidar": "^1.0.6",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
