--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "body-parser": "^1.14.1",
     "chokidar": "^1.0.6",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "lodash": "^3.10.1",
+    "marked": "^0.3.5",
     "mongodb": "^2.0.43",
     "multer": "^1.0.5"
   },
