--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "lodash": "^3.10.1",
     "marked": "^0.3.5",
     "mongodb": "^2.0.43",
-    "multer": "^1.0.5"
+    "multer": "^1.0.5",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {},
   "scripts": {
